# hi-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Procfile.dev  README.md  build.rs  config.toml  docker-compose.yml  justfile
demos/: dot-matrix.html  presence-gallery.html
docs/: arch.md  architecture.md  cluster-forgetting.md  core-shell-config-api.md  data-dir-layout.md  human.md  impl.md  memory.md  overlay-presentation-guideline.md  reactor-cognition-split.md  risks.md
docs/superpowers/plans/: 2026-05-29-bundled-claude-code.md  2026-05-29-human-interface-frontend-plan.md
docs/superpowers/specs/: 2026-05-29-bundled-claude-code-design.md  2026-05-29-human-interface-frontend-design.md
docs/user-journeys/: 01-badminton-top10.md  02-feishu-sprint-backlog.md  03-feishu-flash-cards.md  04-trending-feeds.md  05-news-and-watch.md  06-badminton-near-me.md  07-browser-errand.md  08-operate-apps.md  09-wechat.md  10-vision-sam-yolo.md  11-china-tax.md  12-play-with-child.md  13-equip-a-capability.md  14-knowledge-grows.md  15-talk-over-the-agent.md  16-recognize-people.md  17-play-music.md  18-send-files-to-agent.md  19-upload-passport.md  20-reuse-built-views.md  21-hand-over-bulk-data.md  21-research-before-stale-answer.md  22-critique-before-shipping.md  22-research-before-stale-answer.md  23-critique-before-shipping.md  23-skill-improves-and-refreshes.md  24-skill-improves-and-refreshes.md  25-resume-interrupted-work.md  26-look-and-recall.md  27-watch-and-guide.md  29-test-and-post.md  README.md
examples/: acp_spike.rs
runtime/: manifest.toml  package-lock.json
scripts/: HiAgent.icns  Info.plist  bump-version.sh  bundle.sh  curl-recipes.sh  dev.sh  ensure-dev-signing-id.sh  hi-agent.entitlements  hi-agent.nsi  make-app.sh  make-dmg.sh  make-ico.py  make-installer.sh  repair_vision_mp4.py
src/: bundle.rs  channel_log.rs  floor.rs  gesture.rs  heartbeat.rs  lib.rs  main.rs  mcp.rs  net.rs  pcm.rs  reactor.rs  types.rs
src/acp/: mod.rs  process.rs  session.rs  tap.rs
src/agent/: mod.rs
src/appearance/: attention.html  embed.rs  mod.rs  og.rs
src/appearance/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/appearance/web/public/: site.webmanifest
src/appearance/web/src/: App.tsx  main.tsx
src/appearance/web/src/admin/: AcpView.tsx  Admin.tsx  ScenesView.tsx  admin.css  api.ts  (+1 more)
src/body/: gesture.rs  mod.rs  presence.rs
src/body/capabilities/: accessibility.rs  audio_capture.rs  bundle.rs  chat.rs  desktop_context.rs  face.rs  hotkey.rs  image_gen.rs  input.rs  mod.rs  screencast.rs  stt.rs  tray.rs  tts.rs  video_gen.rs  vision.rs  voiceprint.rs
src/body/reactor/: heartbeat.rs  interleave.rs  interrupts.rs  mod.rs  sequencer.rs  tools.rs  voice.rs  workers.rs
src/body/reflex/: mod.rs
src/capabilities/: audio_capture.rs  face.rs  hotkey.rs  input.rs  mod.rs  screencast.rs  stt.rs  tray.rs  tts.rs  vision.rs  voiceprint.rs
src/config/: mod.rs
src/foundation/: broker.rs  channel_log.rs  credentials.rs  energy_state.rs  machine_id.rs  mod.rs  pcm.rs  segment.rs  shutdown.rs  window_state.rs
src/foundation/acp/: mod.rs  process.rs  session.rs  tap.rs
src/foundation/agent/: mod.rs
src/foundation/auth/: mod.rs
src/foundation/config/: mod.rs
src/foundation/mcp/: mod.rs
src/foundation/models/: mod.rs
src/foundation/observatory/: mod.rs
src/foundation/server/: account.rs  acp.rs  attention.rs  audio.rs  binder.rs  channels.rs  files.rs  generated.rs  headers.rs  history.rs  mcp.rs  media.rs  mod.rs  observe.rs  people.rs  reflex.rs  sessions.rs  settings.rs  stubs.rs  text.rs  view.rs  view_bus.rs  vision.rs
src/foundation/vendors/: anthropic_messages.rs  campplus.rs  doubao_image_gen.rs  doubao_video_gen.rs  doubao_vision.rs  ffmpeg.rs  ffmpeg_frame.rs  insightface_face.rs  macos_accessibility.rs  macos_account.rs  macos_audio_capture.rs  macos_chat.rs  macos_desktop_context.rs  macos_hotkey.rs  macos_overlay.rs  macos_popover.rs  macos_screencast.rs  macos_settings.rs  macos_swift_settings.rs  macos_tray.rs  macos_window.rs  mod.rs  volcengine_stt.rs  volcengine_tts.rs
src/foundation/vendors/swift/: HiSettings.swift
src/identity/: core.md  meaning.md  mod.rs  reflection.md  speaking.md
src/imagery/: doubao.rs  mod.rs
src/llm_proxy/: mod.rs
src/mcp/: mod.rs
src/memory/: core.rs  decay.rs  episodes.rs  facets.rs  intents.rs  journal.rs  layout.rs  media.rs  mod.rs  people_vectors.rs  snapshot.rs
src/mind/: mod.rs
src/mind/memory/: decay.rs  episodes.rs  facets.rs  journal.rs  layout.rs  media.rs  mod.rs  people_vectors.rs  proactivity.rs  snapshot.rs
src/mind/views/: builtin.rs  mod.rs
src/mind/views/builtin/: people-review.jsx
src/observatory/: mod.rs
src/reactor/: aesthetic.md  appearance.md  core.md  default_soul.md  heartbeat.rs  interleave.rs  interrupts.rs  mod.rs  outbound.rs  reflection.md  sequencer.rs  speaking.md  tools.rs  workers.rs
src/reflex/: mod.rs
src/runtime/: manifest.toml  mod.rs  package-lock.json  package.json
src/server/: acp.rs  approval.rs  audio.rs  binder.rs  channels.rs  files.rs  generated.rs  headers.rs  mcp.rs  mod.rs  observe.rs  overlay.rs  reflex.rs  segmenter.rs  sessions.rs  stt_stream.rs  stubs.rs  surface.rs  text.rs  text_bus.rs  thought.rs  thought_bus.rs  view.rs  view_bus.rs  vision.rs
src/vendors/: campplus.rs  doubao_image_gen.rs  doubao_video_gen.rs  doubao_vision.rs  ffmpeg_frame.rs  insightface_face.rs  macos_accessibility.rs  macos_audio_capture.rs  macos_desktop_context.rs  macos_hotkey.rs  macos_input.rs  macos_screencast.rs  macos_tray.rs  mod.rs  scrfd_edgeface.rs  volcengine_stt.rs  volcengine_tts.rs
src/views/: builtin.rs  mod.rs
src/views/builtin/: upload.jsx
src/vision/: doubao.rs  mod.rs
src/voice/: mod.rs  stt.rs  tts.rs  volcengine_stt.rs  volcengine_tts.rs
tests/: approval_flow.rs  e2e_cognition.rs  http_smoke.rs  interruption.rs  journal_layout.rs  llm_proxy.rs  mcp_smoke.rs  runtime_bundle.rs  text_race.rs  thought_race.rs  view_state.rs
(+82 files in other folders)
