[package]
name = "hi-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reference implementation of the human-interface spec"

[lib]
name = "hi_agent"
path = "src/lib.rs"

[[bin]]
name = "hi-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
rust-embed = "8"
# ACP client. 0.12 is the line current as of early 2026; this is the published
# API used in Step 2. If a 0.13 lands with a breaking surface, audit src/acp/.
agent-client-protocol = { version = "0.12", features = ["unstable_session_usage"] }

# Voice capabilities (Step 11): HTTP client for STT/TTS providers and helpers
# for the audio bytes flowing through them. `bytes` is also re-exported via
# `Bytes` in axum extractors; keeping it explicit makes the voice traits
# legible without depending on a particular axum version.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
bytes = "1"
base64 = "0.22"

# QR codes for the phone-upload handoff (file-upload carrier). Pure-Rust SVG
# renderer; default features off to skip the PNG/`image` renderer (we emit SVG).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

directories = "5"

# Local ONNX capabilities (voiceprint, face): on-device inference, no network.
# `ort` is the ONNX Runtime; its default `download-binaries` feature fetches the
# native onnxruntime, so no system install is needed (consistent with the
# managed-runtime philosophy). `knf-rs` is kaldi-native-fbank — it hardcodes
# exactly CAM++'s front-end (16 kHz, 80 mel bins, no dither, per-utterance CMN),
# so features bit-match training. `image` decodes frames; `nalgebra` solves the
# 5-point similarity transform that aligns a face crop before EdgeFace.
# `ndarray` is pinned to 0.16 to match knf-rs's return type (ort uses its own).
ort = "2.0.0-rc.12"
ndarray = "0.16"
image = "0.25"
knf-rs = "0.3.2"
nalgebra = "0.33"

# macOS effector capabilities (input actuation + window capture). `core-graphics`
# gives CGEvent (synthesize mouse/keyboard input) and CGWindowList (enumerate
# on-screen windows); `core-foundation` reads the CFDictionary window records.
# Target-gated so the Linux dev box and the Docker image skip them entirely.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[dev-dependencies]
# tempfile is used by integration tests for throwaway data dirs.
tempfile = "3"
