[package]
name = "hi-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reference implementation of the human-interface spec"

[lib]
name = "hi_agent"
path = "src/lib.rs"

[[bin]]
name = "hi-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
rust-embed = "8"
# ACP client. 0.12 is the line current as of early 2026; this is the published
# API used in Step 2. If a 0.13 lands with a breaking surface, audit src/acp/.
agent-client-protocol = { version = "0.12", features = ["unstable_session_usage"] }

# Voice capabilities (Step 11): HTTP client for STT/TTS providers and helpers
# for the audio bytes flowing through them. `bytes` is also re-exported via
# `Bytes` in axum extractors; keeping it explicit makes the voice traits
# legible without depending on a particular axum version.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
bytes = "1"
base64 = "0.22"

# QR codes for the phone-upload handoff (file-upload carrier). Pure-Rust SVG
# renderer; default features off to skip the PNG/`image` renderer (we emit SVG).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

directories = "5"

# Browser login gate (optional; only active with HI_AGENT_AUTH=on). hi-agent is
# an OIDC relying party to an external IdP — in the intended deployment, the
# Authentik at xiaoyuanzhu.com, whose login screen fronts the WeChat QR scan.
# `openidconnect` does discovery + authorization-code exchange + ID-token (JWT)
# verification; `axum-extra`'s PrivateCookieJar holds the AEAD-encrypted session
# cookie; `time` is the `cookie` crate's duration type, named here for max-age.
# rustls only (no native-tls/openssl), matching the rest of the tree.
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
time = "0.3"

# Local ONNX capabilities (voiceprint, face): on-device inference, no network.
# `ort` is the ONNX Runtime; its default `download-binaries` feature fetches the
# native onnxruntime, so no system install is needed (consistent with the
# managed-runtime philosophy). `knf-rs` is kaldi-native-fbank — it hardcodes
# exactly CAM++'s front-end (16 kHz, 80 mel bins, no dither, per-utterance CMN),
# so features bit-match training. `image` decodes frames; `nalgebra` solves the
# 5-point similarity transform that aligns a face crop before EdgeFace.
# `ndarray` is pinned to 0.16 to match knf-rs's return type (ort uses its own).
ort = "2.0.0-rc.12"
ndarray = "0.16"
image = "0.25"
knf-rs = "0.3.2"
nalgebra = "0.33"

# Integrity check for the auto-provisioned ONNX models (see `crate::models`):
# the recognition models are fetched on first run from third-party mirrors, so
# each download is verified against a pinned SHA-256 before it is trusted and
# its content-addressed cache file is published.
sha2 = "0.10"

# macOS effector capabilities (input actuation + window capture). `core-graphics`
# gives CGEvent (synthesize mouse/keyboard input) and CGWindowList (enumerate
# on-screen windows); `core-foundation` reads the CFDictionary window records.
# Target-gated so the Linux dev box and the Docker image skip them entirely.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

# macOS menu-bar (tray) status item — see `crate::vendors::macos_tray`. The tray
# needs an Objective-C action target for the menu clicks, so this uses the modern
# `objc2` family (not the cocoa-rs family the lines above belong to): `define_class!`
# generates that target safely. Per-class APIs in objc2-app-kit / objc2-foundation
# are behind feature flags, so each AppKit/Foundation type we touch is enabled here.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    # Chat popover (`crate::vendors::macos_popover`): build the WKWebView's request.
    "NSURL",
    "NSURLRequest",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    # Chat popover (`crate::vendors::macos_popover`) + tray click routing: an
    # NSPopover hosting a WKWebView in a bare NSViewController, anchored to the
    # status button (NSView), toggled vs. menu by inspecting the click NSEvent.
    "NSView",
    "NSViewController",
    "NSPopover",
    "NSEvent",
] }
# WebKit for the chat popover — a WKWebView renders the `/chat` surface inside the
# native NSPopover above (`crate::vendors::macos_popover`).
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration"] }

# Native microphone capture for the press-and-hold-⌘ attention gesture
# (`crate::vendors::macos_audio_capture`): opens the default input device and yields
# the 16 kHz mono 16-bit PCM the audio pipeline expects, so the gesture can listen
# with no browser page open. Target-gated like the other desktop capabilities.
cpal = "0.15"

[dev-dependencies]
# tempfile is used by integration tests for throwaway data dirs.
tempfile = "3"
