[package]
name = "hi-agent"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Reference implementation of the human-interface spec"

[lib]
name = "hi_agent"
path = "src/lib.rs"

[[bin]]
name = "hi-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
rust-embed = "8"
# ACP client. Bumped 0.12 -> 1.x (2026-07); this crossed a major, so the
# session/notification surface in src/foundation/acp/ likely needs an audit.
# Kept in lockstep with the node adapters in src/runtime/package.json.
agent-client-protocol = { version = "1.2", features = ["unstable_session_usage"] }

# Voice capabilities (Step 11): HTTP client for STT/TTS providers and helpers
# for the audio bytes flowing through them. `bytes` is also re-exported via
# `Bytes` in axum extractors; keeping it explicit makes the voice traits
# legible without depending on a particular axum version.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
bytes = "1"
base64 = "0.22"

# QR codes for the phone-upload handoff (file-upload carrier). Pure-Rust SVG
# renderer; default features off to skip the PNG/`image` renderer (we emit SVG).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

directories = "6"

# Browser login gate (optional; only active with HI_AGENT_AUTH=on). hi-agent is
# an OIDC relying party to an external IdP — in the intended deployment, the
# Authentik at xiaoyuanzhu.com, whose login screen fronts the WeChat QR scan.
# `openidconnect` does discovery + authorization-code exchange + ID-token (JWT)
# verification; `axum-extra`'s PrivateCookieJar holds the AEAD-encrypted session
# cookie; `time` is the `cookie` crate's duration type, named here for max-age.
# rustls only (no native-tls/openssl), matching the rest of the tree.
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-private"] }
time = "0.3"

# Local ONNX capabilities (voiceprint, face): on-device inference, no network.
# `ort` is the ONNX Runtime; its default `download-binaries` feature fetches the
# native onnxruntime, so no system install is needed (consistent with the
# managed-runtime philosophy). `knf-rs` is kaldi-native-fbank — it hardcodes
# exactly CAM++'s front-end (16 kHz, 80 mel bins, no dither, per-utterance CMN),
# so features bit-match training. `image` decodes frames; `nalgebra` solves the
# 5-point similarity transform that aligns a face crop before EdgeFace.
# `ndarray` WAS pinned to 0.16 to match knf-rs's return type. Bumped to 0.17 in
# the 2026-07 sweep while knf-rs stayed 0.3.2 — if knf-rs still returns an
# ndarray 0.16 `Array`, this reintroduces a two-version-of-ndarray mismatch at
# the knf-rs boundary (src/**/voiceprint). Watch that seam first if it breaks.
ort = "2.0.0-rc.12"
ndarray = "0.17"
image = "0.25"
knf-rs = "0.3.2"
nalgebra = "0.35"

# Integrity check for the auto-provisioned ONNX models (see `crate::models`):
# the recognition models are fetched on first run from third-party mirrors, so
# each download is verified against a pinned SHA-256 before it is trusted and
# its content-addressed cache file is published.
sha2 = "0.10"

# App config store (credential modes, per-mode vendor configs, broker
# account/energy). The `bundled` feature vendors SQLite and compiles it from
# source — no system libsqlite3, consistent with the bundled-desktop
# distribution goal. Only app-managed config lives here; the agent's own data
# (memory journal, `.env`, claude-config) stays on the filesystem.
rusqlite = { version = "0.40", features = ["bundled"] }

# macOS effector capabilities (input actuation + window capture). `core-graphics`
# gives CGEvent (synthesize mouse/keyboard input) and CGWindowList (enumerate
# on-screen windows); `core-foundation` reads the CFDictionary window records.
# Target-gated so the Linux dev box and the Docker image skip them entirely.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
# posix_spawn + the private responsibility_spawnattrs_setdisclaim, used by main() to
# re-exec ourselves as our own TCC "responsible process" under `make dev` (see the
# reexec_disclaiming_responsibility comment in src/main.rs).
libc = "0.2"

# macOS menu-bar (tray) status item — see `crate::vendors::macos_tray`. The tray
# needs an Objective-C action target for the menu clicks, so this uses the modern
# `objc2` family (not the cocoa-rs family the lines above belong to): `define_class!`
# generates that target safely. Per-class APIs in objc2-app-kit / objc2-foundation
# are behind feature flags, so each AppKit/Foundation type we touch is enabled here.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    # Popover (`crate::vendors::macos_popover`): build the WKWebView's request.
    "NSURL",
    "NSURLRequest",
    # Settings window (`crate::vendors::macos_settings`): select the sidebar's first row.
    "NSIndexSet",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    # Face popover (`crate::vendors::macos_popover`) + tray click routing: an NSPopover
    # hosting a WKWebView in a bare NSViewController, anchored to the status button
    # (NSView), toggled vs. menu by inspecting the click NSEvent.
    "NSView",
    "NSViewController",
    "NSPopover",
    "NSEvent",
    # BYOK config popup (`crate::vendors::macos_account`): a modal NSAlert whose
    # accessory view stacks text fields (secure key + optional base URL / model).
    "NSAlert",
    "NSTextField",
    "NSSecureTextField",
    # Face window (`crate::vendors::macos_window`): a titled window whose native title is
    # hidden in favour of a centered NSTextField label sitting in the title-bar strip,
    # tinted by the window's NSColor background (the themeable bar color).
    "NSColor",
    # Settings window (`crate::vendors::macos_settings`): a classic left-list / right-detail
    # preferences window. The sidebar is a source-list NSTableView in an NSScrollView; the
    # detail panes swap NSViews; General uses NSPopUpButtons (theme/language) + a checkbox,
    # Account uses an NSTabView, and the theme picker forces the app-wide NSAppearance.
    "NSTableView",
    "NSTableColumn",
    "NSScrollView",
    "NSTabView",
    "NSTabViewItem",
    "NSPopUpButton",
    "NSAppearance",
] }
# WebKit for the face popover (`crate::vendors::macos_popover`): a WKWebView renders the
# face inside the NSPopover, with a WKUIDelegate that auto-grants mic/camera (the
# decision block comes through as a `block2` block).
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKUIDelegate",
    "WKSecurityOrigin",
    "WKFrameInfo",
    "block2",
] }
block2 = "0.6"

# Native microphone capture for the press-and-hold-⌘ attention gesture
# (`crate::vendors::macos_audio_capture`): opens the default input device and yields
# the 16 kHz mono 16-bit PCM the audio pipeline expects, so the gesture can listen
# with no browser page open. Target-gated like the other desktop capabilities.
cpal = "0.18"

[dev-dependencies]
# tempfile is used by integration tests for throwaway data dirs.
tempfile = "3"
